# surgery_scheduling

./: .gitignore  PROJECT_MAP.md  README.md  Readme.md  data_analysis.py  pyproject.toml  regression_response_comparison_runner.py  requirements.txt  run_experiment.py  surgery_scheduling.py
.github/workflows/: estimation-tests.yml
data/: sample.xlsx
integrated/: callbacks.py  master_problem.py  monolithic_integrated.py  run_integrated.py  run_monolithic_year.py  sub_problem.py
scripts/: __init__.py  booking_realized_time_analysis.py  data_analysis.py  empirical_analysis.py  gap_runner.py  paper_figures.py  run_estimation.py  run_estimation_report.py  run_experiment.py
src/: __init__.py  config.py  constants.py  data_processing.py  feature_names_util.py  json_helper_util.py  output.py  predictors.py  scheduling_utils.py  solver_utils.py  stochastic_utils.py  validation.py
src/bilevel/: __init__.py  ccg.py  config.py  master.py  pricing.py  warmstart.py
src/cli/: run_data_analysis.py  run_estimation.py  run_estimation_report.py  run_experiment.py
src/core/: __init__.py  column.py  config.py  paths.py  types.py
src/data/: __init__.py  capacity.py  eligibility.py  features.py  loader.py  scope.py  splits.py
src/diagnostics/: __init__.py  estimation_report.py
src/estimation/: __init__.py  bootstrap.py  inverse.py  orchestrator.py  profiles.py  quantile_model.py  recommendation.py  response.py  serialization.py
src/experiments/: __init__.py  runner.py
src/methods/: __init__.py  base.py  behavioral_ccg.py  booked.py  oracle.py  (+3 more)
tests/: conftest.py
(+43 files in other folders)
