[project]
name = "or-scheduling"
version = "0.1.0"
description = "Incentive-aware operating room scheduling with behavioral response modeling"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "gurobipy>=10.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]
